tests/baselines/reference/parserModule1.errors.txt
parserModule1.ts(7,20): error TS2322: Type 'null' is not assignable to type 'IDiagnosticWriter'.


==== parserModule1.ts (1 errors) ====
        export namespace CompilerDiagnostics {
            export var debug = false;
            export interface IDiagnosticWriter {
                Alert(output: string): void;
            }
    
            export var diagnosticWriter: IDiagnosticWriter = null;
                       ~~~~~~~~~~~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'IDiagnosticWriter'.
    
            export var analysisPass: number = 0;
    
            export function Alert(output: string) {
                if (diagnosticWriter) {
                    diagnosticWriter.Alert(output);
                }
            }
    
            export function debugPrint(s: string) {
                if (debug) {
                    Alert(s);
                }
            }
    
            export function assert(condition: boolean, s: string) {
                if (debug) {
                    if (!condition) {
                        Alert(s);
                    }
                }
            }
    
        }